Refactored some classes at specific places, but mainly finished implementing the Inventory class